--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: euroleagueR
 Type: Package
 Title: Data Extraction of Euroleague Basketball Statistics
-Version: 0.0.0.1000
+Version: 0.0.0.2000
 Authors@R: c(
     person("Jason", "Zivkovic", , "jaseziv83@gmail.com", role = c("aut", "cre", "cph"))
   )
@@ -15,6 +15,13 @@ URL: https://github.com/JaseZiv/euroleagueR
 BugReports: https://github.com/JaseZiv/euroleagueR/issues
 Depends:
   R (>= 4.0.0)
+Imports:
+    dplyr,
+    cli
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 7.2.3
+Config/testthat/edition: 3
